# iar-zephyr-fixes

./: .gitignore  CMakeLists.txt  Details on zephyr build process.md  IAR_ZEPHYR_TOOLCHAIN_README.md  MAINTAINERS.yml  README.md  README.rst  iar_init_zephyr.sh  iar_run_zephyr.sh  quarantine.yml  west.yml
arch/arm/core/: Kconfig  tls.c
boards/nordic/nrf51dk/: nrf51dk_nrf51822.yaml
boards/nordic/nrf52840dk/: nrf52840dk_nrf52840.yaml
boards/nxp/frdm_mcxn947/: frdm_mcxn947_mcxn947_cpu0.yaml
boards/nxp/mimxrt1060_evk/: mimxrt1060_evk_mimxrt1062_qspi.yaml  mimxrt1060_evk_mimxrt1062_qspi_B.yaml  mimxrt1060_evkb.yaml
boards/qemu/cortex_m0/: qemu_cortex_m0.yaml
boards/qemu/cortex_m3/: qemu_cortex_m3.yaml
cmake/bintools/iar/: target.cmake  target_bintools.cmake
cmake/bintools/iccarm/: target.cmake
cmake/compiler/: compiler_flags_template.cmake
cmake/compiler/gcc/: compiler_flags.cmake
cmake/compiler/iar/: compiler_flags.cmake  generic.cmake  (+4 more)
cmake/linker/: linker_script_common.cmake
cmake/modules/: extensions.cmake
drivers/flash/: jesd216.h
drivers/timer/: cortex_m_systick.c
include/zephyr/: device.h  kernel.h  toolchain.h
kernel/: CMakeLists.txt  Kconfig  timer.c
kernel/include/: kthread.h
lib/cpp/: Kconfig
lib/libc/: CMakeLists.txt  Kconfig
modules/cmsis-dsp/: CMakeLists.txt
modules/cmsis-nn/: CMakeLists.txt
modules/segger/: CMakeLists.txt
scripts/ci/: check_compliance.py
soc/nordic/: CMakeLists.txt
subsys/logging/: log_core.c
subsys/shell/: shell.c
tests/: test_config.yaml
tests/net/lib/coap_server/common/: CMakeLists.txt
(+86 files in other folders)
